fix: Update tag background color for improved contrast in white mode

--- a/css/style.css
+++ b/css/style.css
@@ -2508,7 +2508,7 @@ button:hover {
 }
 
 .white-mode .tag {
-  background-color: #cfcfcf;
+  background-color: #eeeeee;
   color: #141414;
 }
 
